<resources>
    <string name="app_name">WinterFinal-Travelmate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="checkInternet">please check the internet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notRegisteredYetCreateANewAccount">Not registered yet? Create a new account</string>
    <string name="travelMate">Travel Mate</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Signup</string>
    <string name="signupTvAlreadyAMemberLogin">Already A Member? Login</string>
    <string name="signupEmailFormatWrong">Email Format Wrong!</string>
    <string name="signupTvPasswordFormatWrong">Password Should Have !</string>
    <string name="signupTvFirstNameFormatWrong">First Name Just Have Alphabet!</string>
    <string name="signupTvConfirmPasswordWrong">Confirm Password Wrong!</string>
    <string name="signupTvLastNameFormatWrong">Last Name Just Have Alphabet!</string>
    <string name="loginFragmentSuccessful">Successful</string>
    <string name="successful">thanh cong</string>
    <string name="error">please check email or password</string>
    <string name="note">please wait ...</string>
    <string name="inputAccount">please input email and password</string>
    <string name="loginfragmentCannotLogin">Can not login</string>
    <string name="signUpFragmentOk">OK</string>
    <!--Detail Activity-->
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="daNang">Da nang</string>
    <string name="metric">C</string>
    <string name="percent">%s %%</string>
    <string name="meterOverSecond">%s m/s</string>
    <string name="degreeC">%s°C</string>
    <string name="noCaseSatisfied">No case satisfied</string>
    <string name="loading">Loading</string>
    <!--MostPopularActivity-->
    <string name="mostPopularCities">Most Popular Cities</string>
    <string name="hue">Hue</string>
    <string name="popularCityTvTravelmate">TravelMate</string>
    <!--Navigation-->
    <string name="navigationDrawerOpen">Open navigation drawer</string>
    <string name="navigationDrawerClose">Close navigation drawer</string>
    <string name="navigationHeaderSubtitle">android.studio@android.com</string>
    <string name="navigationHeaderDesc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigationDrawerDestination">Destination</string>
    <string name="navigationDrawerHotel">Hotel</string>
    <string name="navigationDrawerFood">Food and drink</string>
    <string name="navigationDrawerCommunicate">Communicate</string>
    <string name="navigationDrawerLogout">Logout</string>
    <string name="navigationDrawerSetting">Change password and avatar</string>
    <!--ActionBar-->
    <string name="populatFragmentTravelMate">TravelMate</string>
    <!--Fragment Setting-->
    <string name="search">Search</string>
    <string name="fragmentSettingEdtOldPassword">Old Password</string>
    <string name="fragmentSettingEdtNewPassword">New Password</string>
    <string name="fragmentSettingEdtconfirmPassword">Confirm Password</string>
    <string name="fragmentSettingBtnDone">Done</string>
    <string name="fragmentSettingBtnCancle">Cancle</string>
    <string name="passwordWrong">password wrong!</string>
    <string name="fragmentSettingBtnCancel">Cancel</string>
    <string name="itemHotelTvTapForMoreDetail">Tap for more detail</string>
    <string name="itemHotelKilometer">%.1f km</string>
    <string name="itemHotelTvMore">More</string>
    <string name="itemHotelTvMoreValues">tel: %s</string>
    <string name="fragmentSettingTvError">This form must not be empty</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading ...</string>
    <!--permission-->
    <string name="noteGallery">gallery</string>
    <string name="noteCamera">camera</string>
    <string name="optionChoose">Please choose</string>
    <string name="noteAccess">App needs to access the</string>
    <string name="setting">SETTINGS</string>
    <string name="cancel">don\'t allow</string>
    <string name="data">data</string>
    <string name="gallery">Select photo from gallery</string>
    <string name="camera">Capture photo from camera</string>
    <string name="action">Select Action</string>
    <string name="percentProcess">%</string>
    <string name="demo">Hai Bà Trưng là một ngôi trường cấp 3 nằm trên con phố Hồng Mai và còn được biết đến với cái tên THPT Đoàn Kết - Hai Bà Trưng. Nếu chạy dọc theo cả khu phố Hồng Mai thì bạn sẽ choáng ngợp với thiên đường ăn vặt "cứ đi một tí" là lại thấy có quán ăn xuất hiện. Bởi lẽ, trong khu phố Hồng Mai hội tụ đến 3 - 4 trường học từ cấp 1 cho đến cấp 3 nên bảo làm sao mà các món ăn vặt trường THPT Hai Bà Trưng không phong phú cho được. Chưa kể nếu bạn đi chán chê hết con phố Hồng Mai rồi lại đi tiếp sang ngõ Quỳnh là sẽ bất ngờ khi thấy tiếp một thiên đường ăn vặt nhỏ nữa cũng ở khu này mà chẳng xa trường THPT Hai Bà Trưng cho lắm.
    </string>
</resources>
