<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlueBlack"
        tools:context=".login.SignUpFragment">
    <TextView
            android:textAlignment="center"
            android:id="@+id/tvNameApp"
            android:text="@string/travelMate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="40dp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
    />

    <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/firstName"
            android:inputType="text"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDark"
            tools:ignore="Autofill"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNameApp"/>

    <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/lastName"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDark"
            tools:ignore="Autofill"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName"/>

    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDark"
            tools:ignore="Autofill"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName"/>
    <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDark"
            tools:ignore="Autofill"/>
    <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteDark"
            tools:ignore="Autofill"/>
    <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintHorizontal_bias="0.5"
            android:background="@color/colorBlueBeach"/>
    <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyAMemberLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"/>
    <TextView
            android:background="@color/colorDark"
            android:padding="10dp"
            android:id="@+id/tvMessageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>
