<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".navigationdrawer.SettingFragment"
        android:background="@color/colorBlueGreen">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/img_avatar"/>

    <EditText
            android:id="@+id/edtOldPassword"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/fragmentSettingEdtOldPassword"
            tools:ignore="Autofill" app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:id="@+id/edtNewPassword"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/edtOldPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/fragmentSettingEdtNewPassword"
            tools:ignore="Autofill"/>

    <EditText
            android:id="@+id/edtConfirmPassword"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNewPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/fragmentSettingEdtconfirmPassword"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnCancel"
            android:background="@color/colorYellow"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/fragmentSettingBtnDone"/>

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"
            app:layout_constraintLeft_toRightOf="@id/btnChangePassword"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorYellow"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/fragmentSettingBtnCancel"/>

    <TextView
            android:background="@color/colorDark"
            android:padding="10dp"
            android:id="@+id/tvMessageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnCancle"/>
</android.support.constraint.ConstraintLayout>